# rpdf

./: Cargo.toml  Makefile  README.md  plan.md  review.md
ops/: evalparams.py  evaluate.py  kpop_exec.py  kpop_gates.py  kpop_loader.py  kpop_metric_ref.py  kpop_parser_ids.py  kpop_serialize.py  kpop_suites.py  kpop_write.py
scripts/: register_bench_corpora.py
src/: cli.rs  engine.rs  expand.rs  inspect_cmd.rs  lib.rs  main.rs  markdown.rs  model.rs  model_dedup.rs  model_pipe_table.rs  model_postprocess.rs  model_postprocess_lines.rs  model_postprocess_prose.rs  model_report_headings.rs  pagespec.rs  parse_batch.rs  parse_cmd.rs  parse_document.rs  parse_overwrite.rs  parse_validate.rs  reading_order.rs  render_cmd.rs  test_support.rs
src/parse_cmd/: mod.rs
tests/: batch_output_dir_mkdir.rs  cli_parse_matrix.rs  cli_parse_stdout_output.rs  cli_version.rs  fast.rs  parse_batch.rs  parse_fixture.rs  parse_json_bbox.rs  parse_partial_success.rs  slow.rs  test_ml_stack_compat.py  test_ops_evaluate.py  test_ops_kiss_coverage.py  test_register_bench_corpora.py  test_repo_layout.py
tests/fast/: cli_root.rs  common.rs  inspect_contract.rs  parse_batch_contract.rs  parse_flag_matrix.rs  parse_json_contract.rs  parse_outputs.rs  parse_status_codes.rs  parse_stdout_stderr.rs  render_contract.rs  tsla_regression.rs
tests/slow/: benchmark_adapter_smoke.rs  benchmark_failure_surface.rs  benchmark_neighbor.rs  benchmark_sequential.rs  common.rs
