[package]
name = "rpdf"
version = "0.1.0"
edition = "2021"
autotests = false
description = "Local-first PDF parser CLI"
license = "MIT"
repository = "https://github.com/dsweet/rpdf"
keywords = ["pdf", "cli", "parser"]
categories = ["command-line-utilities", "parser-implementations"]
readme = "README.md"

[lib]
name = "rpdf"
path = "src/lib.rs"

[[bin]]
name = "rpdf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
pdfium-render = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1"
walkdir = "2"
dirs = "5"
flate2 = "1"
tar = "0.4"
ureq = { version = "2", features = ["tls"] }
sha2 = "0.11.0"

[dev-dependencies]
serde_json = "1.0.149"

[[test]]
name = "fast"
path = "tests/fast.rs"

[[test]]
name = "slow"
path = "tests/slow.rs"

[lints.clippy]
multiple-crate-versions = "allow"
